deploy: 259b8fde6c5923771ceee86c4c8dce3cbc114da6

--- a/genindex.html
+++ b/genindex.html
@@ -1008,10 +1008,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray8int_bitsEv">APyFixedArray::int_bits (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
@@ -1269,6 +1269,8 @@
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8true_manEv">APyFloat::true_man (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat16update_from_bitsEN2nb4int_E">APyFloat::update_from_bits (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat16update_from_bitsENSt8uint64_tE">[1]</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat4zeroEiiNSt8optionalI5exp_tEE">APyFloat::zero (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv416apyfloat_to_bitsRK12APyFloatDataNSt7uint8_tENSt7uint8_tE">apyfloat_to_bits (C++ function)</a>
 </li>
@@ -2822,6 +2824,8 @@
   <h2>Z</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/apyfloat.html#apytypes.APyFloat.zero">zero() (apytypes.APyFloat method)</a>
+</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.zeros">zeros() (apytypes.APyCFixedArray method)</a>
 
         <ul>
