deploy: 7483ccd1feaae12f2ad1c0b4e0e017613a590767

--- a/genindex.html
+++ b/genindex.html
@@ -1004,6 +1004,8 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray9fullrangeERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::fullrange (C++ function)</a>
+</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
@@ -1357,6 +1359,8 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray9from_bitsERKN2nb8sequenceEiiNSt8optionalI5exp_tEE">APyFloatArray::from_bits (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEEiiNSt8optionalI5exp_tEE">APyFloatArray::from_numbers (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray9fullrangeERKN2nb6objectERKN2nb6objectENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::fullrange (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray8get_biasEv">APyFloatArray::get_bias (C++ function)</a>
 </li>
@@ -1790,10 +1794,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK25FloatingPointInnerProductclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::operator() (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_bENK25FloatingPointInnerProduct12real_productEvPK12APyFloatDataPK12APyFloatDataP12APyFloatData">FloatingPointInnerProduct::real_product (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_bENK25FloatingPointInnerProduct8real_sumEvPK12APyFloatDataPK12APyFloatDataP12APyFloatData">FloatingPointInnerProduct::real_sum (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_NSt6size_tE_NSt6size_tE_NSt6size_tEE23FloatingPointMultiplier">FloatingPointMultiplier (C++ class)</a>
@@ -1891,6 +1895,8 @@
 </li>
         </ul></li>
         <li><a href="api/arrayfunctions.html#apytypes.full_like">full_like() (in module apytypes)</a>
+</li>
+        <li><a href="api/arrayfunctions.html#apytypes.fullrange">fullrange() (in module apytypes)</a>
 </li>
         <li><a href="api/utils.html#apytypes.fx">fx() (in module apytypes)</a>
 </li>
