deploy: ed539352cfd0d1c8dba589c4f93d193a4a937fe9

--- a/genindex.html
+++ b/genindex.html
@@ -2028,6 +2028,8 @@
 </li>
         <li><a href="api/utils.html#apytypes.fx">fx() (in module apytypes)</a>
 </li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv46FX_ONE">FX_ONE (C++ member)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
