deploy: ef37e67cc19c91c18e44eb2829fd465ef7b81db1

--- a/genindex.html
+++ b/genindex.html
@@ -317,6 +317,8 @@
         <ul>
           <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.__init__">(apytypes.APyCFixedArray method)</a>
 </li>
+          <li><a href="api/apycfloat.html#apytypes.APyCFloat.__init__">(apytypes.APyCFloat method)</a>
+</li>
           <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.__init__">(apytypes.APyCFloatArray method)</a>
 </li>
           <li><a href="api/apyfixed.html#apytypes.APyFixed.__init__">(apytypes.APyFixed method)</a>
@@ -428,10 +430,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl12FINAL_RES_LOE">_FloatingPointAddSubSameWl::FINAL_RES_LO (C++ member)</a>
 </li>
-        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl8MAN_MASKE">_FloatingPointAddSubSameWl::MAN_MASK (C++ member)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl8MAN_MASKE">_FloatingPointAddSubSameWl::MAN_MASK (C++ member)</a>
+</li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl10NORM_CONSTE">_FloatingPointAddSubSameWl::NORM_CONST (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK26_FloatingPointAddSubSameWlclEPK12APyFloatDataPK12APyFloatDataP12APyFloatData">_FloatingPointAddSubSameWl::operator() (C++ function)</a>
@@ -518,7 +520,7 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E25_overflow_twos_complementv22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORii">_overflow_twos_complement (C++ function)</a>
 </li>
-        <li><a href="cpp_api/python_util.html#_CPPv448_python_sequence_extract_shape_recursive_descentRKN8nanobind8sequenceENSt11string_viewE">_python_sequence_extract_shape_recursive_descent (C++ function)</a>
+        <li><a href="cpp_api/python_util.html#_CPPv448_python_iterable_extract_shape_recursive_descentRKN8nanobind8iterableENSt11string_viewE">_python_iterable_extract_shape_recursive_descent (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_16QuantizationMode_bE10_qntz_funcDaR5man_tR5exp_t5exp_tib5man_t5man_t">_qntz_func (C++ function)</a>
 </li>
@@ -714,7 +716,7 @@
           <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray">(class in apytypes)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::APyCFixedArray (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayEv">[4]</a>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::APyCFixedArray (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray14APyCFixedArrayEv">[4]</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray6arangeERKN2nb6objectERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::arange (C++ function)</a>
 </li>
@@ -746,9 +748,9 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_array (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_complexERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_complex (C++ function)</a>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_complexERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_complex (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_numbers (C++ function)</a>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8get_imagEv">APyCFixedArray::get_imag (C++ function)</a>
 </li>
@@ -994,7 +996,7 @@
         </ul></li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3absEv">APyFixedArray::abs (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::APyFixedArray (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayEv">[4]</a>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::APyFixedArray (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEEii">[2]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayERKNSt6vectorINSt6size_tEEEiiRR11vector_type">[3]</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray13APyFixedArrayEv">[4]</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray6arangeERKN2nb6objectERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::arange (C++ function)</a>
 </li>
@@ -1024,7 +1026,7 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray9fullrangeERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::fullrange (C++ function)</a>
 </li>
@@ -1334,7 +1336,7 @@
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray3absEv">APyFloatArray::abs (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray13APyFloatArrayERKN8nanobind8sequenceERKN8nanobind8sequenceERKN8nanobind8sequenceENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::APyFloatArray (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray13APyFloatArrayERKNSt6vectorINSt6size_tEEENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[1]</a>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray13APyFloatArrayERKN8nanobind8iterableERKN8nanobind8iterableERKN8nanobind8iterableENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::APyFloatArray (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray13APyFloatArrayERKNSt6vectorINSt6size_tEEENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray6arangeERKN2nb6objectERKN2nb6objectERKN2nb6objectENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::arange (C++ function)</a>
 </li>
@@ -1364,7 +1366,7 @@
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray19create_array_staticERKNSt6vectorINSt6size_tEEERK8APyFloat">APyFloatArray::create_array_static (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray15create_in_placeEP13APyFloatArrayRKN2nb5typedIN2nb8sequenceEN2nb3anyEEERKN2nb5typedIN2nb8sequenceEN2nb3anyEEERKN2nb5typedIN2nb8sequenceEN2nb3anyEEEiiNSt8optionalI5exp_tEE">APyFloatArray::create_in_place (C++ function)</a>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray15create_in_placeEP13APyFloatArrayRKN2nb5typedIN2nb8iterableEN2nb3anyEEERKN2nb5typedIN2nb8iterableEN2nb3anyEEERKN2nb5typedIN2nb8iterableEN2nb3anyEEEiiNSt8optionalI5exp_tEE">APyFloatArray::create_in_place (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray13create_scalarEv">APyFloatArray::create_scalar (C++ function)</a>
 </li>
@@ -1378,9 +1380,9 @@
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray10from_arrayERKN8nanobind7ndarrayIN8nanobind8c_contigEEEiiNSt8optionalI5exp_tEE">APyFloatArray::from_array (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray9from_bitsERKN2nb8sequenceEiiNSt8optionalI5exp_tEE">APyFloatArray::from_bits (C++ function)</a>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray9from_bitsERKN2nb8iterableEiiNSt8optionalI5exp_tEE">APyFloatArray::from_bits (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray12from_numbersERKN2nb5typedIN2nb8sequenceEN2nb3anyEEEiiNSt8optionalI5exp_tEE">APyFloatArray::from_numbers (C++ function)</a>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEEiiNSt8optionalI5exp_tEE">APyFloatArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray9fullrangeERKN2nb6objectERKN2nb6objectENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::fullrange (C++ function)</a>
 </li>
@@ -2144,6 +2146,8 @@
           <li><a href="cpp_api/apyfloat_util.html#_CPPv46is_infRK12APyFloatDataNSt7uint8_tE">(C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv46is_infRK12APyFloatDataRK12APyFloatSpec">[1]</a>
 </li>
         </ul></li>
+        <li><a href="cpp_api/python_util.html#_CPPv4IDpE23is_iterable_and_excludebRKN8nanobind6handleE">is_iterable_and_exclude (C++ function)</a>
+</li>
         <li><a href="cpp_api/ieee754.html#_CPPv416is_little_endianv">is_little_endian (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv415is_max_exponentRK12APyFloatDataNSt7uint8_tE">is_max_exponent (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv415is_max_exponentRK12APyFloatDataRK12APyFloatSpec">[1]</a>
@@ -2160,8 +2164,6 @@
           <li><a href="cpp_api/apyfloat_util.html#_CPPv49is_normalRK12APyFloatDataNSt7uint8_tE">(C++ function)</a>
 </li>
         </ul></li>
-        <li><a href="cpp_api/python_util.html#_CPPv4IDpE18is_seq_and_excludebRKN8nanobind6handleE">is_seq_and_exclude (C++ function)</a>
-</li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.is_subnormal">is_subnormal (apytypes.APyFloat property)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv431is_valid_decimal_numeric_stringRKNSt6stringE">is_valid_decimal_numeric_string (C++ function)</a>
@@ -2462,15 +2464,19 @@
 </li>
         <li><a href="cpp_api/python_util.html#c.PyLong_IsNegative">PyLong_IsNegative (C macro)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/python_util.html#_CPPv410PyLong_NewNSt6size_tE">PyLong_New (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/python_util.html#c.PyLong_SetSignAndDigitCount">PyLong_SetSignAndDigitCount (C macro)</a>
 </li>
         <li><a href="cpp_api/array_utils.html#_CPPv414PyShapeParam_t">PyShapeParam_t (C++ type)</a>
 </li>
         <li><a href="cpp_api/array_utils.html#_CPPv414PyShapeTuple_t">PyShapeTuple_t (C++ type)</a>
+</li>
+        <li><a href="cpp_api/python_util.html#_CPPv4I_bE29python_iterable_extract_shapeNSt6vectorINSt6size_tEEERKN8nanobind8iterableENSt11string_viewE">python_iterable_extract_shape (C++ function)</a>
+</li>
+        <li><a href="cpp_api/python_util.html#_CPPv4IDpE20python_iterable_walkNSt6vectorIN8nanobind6objectEEERKN8nanobind8iterableENSt11string_viewE">python_iterable_walk (C++ function)</a>
 </li>
         <li><a href="cpp_api/python_util.html#_CPPv4I0E23python_limb_vec_to_longN8nanobind4int_E22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORbNSt8optionalIjEE">python_limb_vec_to_long (C++ function)</a>
 </li>
