--- a/genindex.html
+++ b/genindex.html
@@ -934,6 +934,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed15python_deepcopyERKN2nb5typedIN2nb4dictEN2nb4int_EN2nb3anyEEE">APyFixed::python_deepcopy (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed9read_dataEv">APyFixed::read_data (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed4reprEv">APyFixed::repr (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed12set_bit_pow2Eib">APyFixed::set_bit_pow2 (C++ function)</a>
@@ -1020,10 +1022,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::eye (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
@@ -2260,6 +2262,8 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_test_bitb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_test_bit (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E21limb_vector_to_uint64NSt8uint64_tERK11VECTOR_TYPENSt6size_tE">limb_vector_to_uint64 (C++ function)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -2987,10 +2991,6 @@
 <section id="U" class="genindex-section">
   <h2>U</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E25uint64_t_from_limb_vectorNSt8uint64_tERK11VECTOR_TYPENSt6size_tE">uint64_t_from_limb_vector (C++ function)</a>
-</li>
-    </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#c.UINT64_TO_LIMB">UINT64_TO_LIMB (C macro)</a>
 </li>
