deploy: 3d71e2a966f023c1b5ba39cec457dd311bf6546e

--- a/genindex.html
+++ b/genindex.html
@@ -430,10 +430,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl12FINAL_RES_LOE">_FloatingPointAddSubSameWl::FINAL_RES_LO (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl8MAN_MASKE">_FloatingPointAddSubSameWl::MAN_MASK (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N26_FloatingPointAddSubSameWl10NORM_CONSTE">_FloatingPointAddSubSameWl::NORM_CONST (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK26_FloatingPointAddSubSameWlclEPK12APyFloatDataPK12APyFloatDataP12APyFloatData">_FloatingPointAddSubSameWl::operator() (C++ function)</a>
@@ -539,6 +539,10 @@
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E21_quantize_rnd_min_infv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii">_quantize_rnd_min_inf (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E18_quantize_rnd_zerov28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii">_quantize_rnd_zero (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E21_quantize_stoch_equalv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiiiNSt8functionIFNSt8uint64_tEvEEE">_quantize_stoch_equal (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E24_quantize_stoch_weightedv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiiiNSt8functionIFNSt8uint64_tEvEEE">_quantize_stoch_weighted (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E13_quantize_trnv28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii">_quantize_trn (C++ function)</a>
 </li>
@@ -1022,12 +1026,12 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray3eyeERKN2nb4int_ENSt8optionalIN2nb4int_EEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::eye (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9frac_bitsEv">APyFixedArray::frac_bits (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray9fullrangeERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::fullrange (C++ function)</a>
@@ -1468,13 +1472,19 @@
         </ul></li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext27APyFloatQuantizationContextERK16QuantizationModeNSt8optionalINSt8uint64_tEEE">APyFloatQuantizationContext::APyFloatQuantizationContext (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext14default_engineE">APyFloatQuantizationContext::default_engine (C++ member)</a>
+</li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext13enter_contextEv">APyFloatQuantizationContext::enter_context (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext12exit_contextEv">APyFloatQuantizationContext::exit_context (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext10new_engineE">APyFloatQuantizationContext::new_engine (C++ member)</a>
+</li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext8new_modeE">APyFloatQuantizationContext::new_mode (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext8new_seedE">APyFloatQuantizationContext::new_seed (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext11prev_engineE">APyFloatQuantizationContext::prev_engine (C++ member)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N27APyFloatQuantizationContext9prev_modeE">APyFloatQuantizationContext::prev_mode (C++ member)</a>
 </li>
@@ -2054,12 +2064,10 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv427get_float_quantization_modev">get_float_quantization_mode (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.get_float_quantization_mode">get_float_quantization_mode() (in module apytypes)</a>
 </li>
-        <li><a href="cpp_api/apytypes_common.html#_CPPv427get_float_quantization_seedv">get_float_quantization_seed (C++ function)</a>
-</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.get_float_quantization_seed">get_float_quantization_seed() (in module apytypes)</a>
 </li>
         <li><a href="cpp_api/array_utils.html#_CPPv419get_normalized_axesRK14PyShapeParam_tKNSt6size_tE">get_normalized_axes (C++ function)</a>
@@ -2069,6 +2077,10 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv413get_qntz_func16QuantizationModeb">get_qntz_func (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#c.GET_QNTZ_FUNC_ALTERNATIVE">GET_QNTZ_FUNC_ALTERNATIVE (C macro)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv417get_rnd64_fp_seedv">get_rnd64_fp_seed (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv417get_rnd64_fx_seedv">get_rnd64_fx_seed (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -2538,7 +2550,7 @@
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N16QuantizationMode8TRN_ZEROE">QuantizationMode::TRN_ZERO (C++ enumerator)</a>
 </li>
-        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E8quantizev28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii16QuantizationMode">quantize (C++ function)</a>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E8quantizev28RANDOM_ACCESS_ITERATOR_INOUT28RANDOM_ACCESS_ITERATOR_INOUTiiii16QuantizationModeNSt8optionalINSt8functionIFNSt8uint64_tEvEEEEE">quantize (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv420quantize_apymantissaR8APyFixedbi16QuantizationMode">quantize_apymantissa (C++ function)</a>
 </li>
@@ -2552,8 +2564,6 @@
   <h2>R</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="cpp_api/apytypes_common.html#_CPPv419random_number_floatv">random_number_float (C++ function)</a>
-</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.ravel">ravel() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -2580,8 +2590,6 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E12remove_cvref">remove_cvref (C++ struct)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4N12remove_cvref4typeE">remove_cvref::type (C++ type)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E14remove_cvref_t">remove_cvref_t (C++ type)</a>
@@ -2596,9 +2604,15 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.reshape">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv421reverse_double_dabbleRKNSt6vectorINSt7uint8_tEEE">reverse_double_dabble (C++ function)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.RND">RND (apytypes.QuantizationMode attribute)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv48rnd64_fpv">rnd64_fp (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv48rnd64_fxv">rnd64_fx (C++ function)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.RND_CONV">RND_CONV (apytypes.QuantizationMode attribute)</a>
 </li>
@@ -2609,6 +2623,10 @@
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.RND_MIN_INF">RND_MIN_INF (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.RND_ZERO">RND_ZERO (apytypes.QuantizationMode attribute)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv420rst_default_rnd64_fpNSt8uint64_tE">rst_default_rnd64_fp (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv420rst_default_rnd64_fxNSt8uint64_tE">rst_default_rnd64_fx (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -2699,8 +2717,6 @@
         <li><a href="cpp_api/apytypes_common.html#_CPPv427set_float_quantization_mode16QuantizationMode">set_float_quantization_mode (C++ function)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.set_float_quantization_mode">set_float_quantization_mode() (in module apytypes)</a>
-</li>
-        <li><a href="cpp_api/apytypes_common.html#_CPPv427set_float_quantization_seedNSt8uint64_tE">set_float_quantization_seed (C++ function)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.set_float_quantization_seed">set_float_quantization_seed() (in module apytypes)</a>
 </li>
