--- a/genindex.html
+++ b/genindex.html
@@ -1084,9 +1084,11 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4I00ENK13APyFixedArray15to_bits_ndarrayEN2nb7ndarrayI13NB_ARRAY_TYPE8INT_TYPEEEv">APyFixedArray::to_bits_ndarray (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray32to_bits_python_recursive_descentENSt6size_tERN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE">APyFixedArray::to_bits_python_recursive_descent (C++ function)</a>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray32to_bits_python_recursive_descentENSt6size_tERN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEb">APyFixedArray::to_bits_python_recursive_descent (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray8to_numpyEv">APyFixedArray::to_numpy (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray14to_signed_bitsEv">APyFixedArray::to_signed_bits (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray9to_stringEi">APyFixedArray::to_string (C++ function)</a>
 </li>
@@ -1782,6 +1784,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/arrayfunctions.html#apytypes.expand_dims">expand_dims() (in module apytypes)</a>
 </li>
+        <li><a href="api/arrayfunctions.html#apytypes.export_csv">export_csv() (in module apytypes)</a>
+</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.eye">eye() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -2112,6 +2116,8 @@
           <li><a href="api/apycfloat.html#apytypes.APyCFloat.imag">(apytypes.APyCFloat property)</a>
 </li>
         </ul></li>
+        <li><a href="api/arrayfunctions.html#apytypes.import_csv">import_csv() (in module apytypes)</a>
+</li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.inf">inf() (apytypes.APyFloat method)</a>
 </li>
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.int_bits">int_bits (apytypes.APyCFixed property)</a>
