deploy: 6898d6152fb8f8c43ca255d3b72447fd2bf9edb5

--- a/genindex.html
+++ b/genindex.html
@@ -2304,14 +2304,16 @@
         </ul></li>
         <li><a href="cpp_api/ieee754.html#_CPPv413man_of_doubled">man_of_double (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.max">max() (apytypes.APyFixedArray method)</a>
 
         <ul>
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.max">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/arrayfunctions.html#apytypes.meshgrid">meshgrid() (in module apytypes)</a>
+</li>
         <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.min">min() (apytypes.APyFixedArray method)</a>
 
         <ul>
