deploy: 3ebcb45b4a2941bd13bacdf51e4433ccc42875ad

--- a/genindex.html
+++ b/genindex.html
@@ -1912,10 +1912,10 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct11add_same_wlE">FloatingPointInnerProduct::add_same_wl (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct1fE">FloatingPointInnerProduct::f (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct25FloatingPointInnerProductERK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode">FloatingPointInnerProduct::FloatingPointInnerProduct (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_bENK25FloatingPointInnerProduct13inner_productEvPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::inner_product (C++ function)</a>
@@ -1982,9 +1982,11 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.from_array">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
-        <li><a href="api/apyfloat.html#apytypes.APyFloat.from_bits">from_bits() (apytypes.APyFloat method)</a>
+        <li><a href="api/apycfloat.html#apytypes.APyCFloat.from_bits">from_bits() (apytypes.APyCFloat method)</a>
 
         <ul>
+          <li><a href="api/apyfloat.html#apytypes.APyFloat.from_bits">(apytypes.APyFloat method)</a>
+</li>
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.from_bits">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
@@ -2925,6 +2927,8 @@
         <li><a href="api/apycfixed.html#apytypes.APyCFixed.to_bits">to_bits() (apytypes.APyCFixed method)</a>
 
         <ul>
+          <li><a href="api/apycfloat.html#apytypes.APyCFloat.to_bits">(apytypes.APyCFloat method)</a>
+</li>
           <li><a href="api/apyfixed.html#apytypes.APyFixed.to_bits">(apytypes.APyFixed method)</a>
 </li>
           <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.to_bits">(apytypes.APyFixedArray method)</a>
