--- a/genindex.html
+++ b/genindex.html
@@ -1022,10 +1022,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray10from_arrayERKN2nb7ndarrayIN2nb8c_contigEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_array (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray9fullrangeERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::fullrange (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
@@ -1116,6 +1116,10 @@
           <li><a href="api/apyfloat.html#apytypes.APyFloat">(class in apytypes)</a>
 </li>
         </ul></li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat27_latex_power_of_two_integerEv">APyFloat::_latex_power_of_two_integer (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat30_latex_power_of_two_normalizedEv">APyFloat::_latex_power_of_two_normalized (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat3absEv">APyFloat::abs (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatENSt7uint8_tENSt7uint8_tE5exp_t">APyFloat::APyFloat (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[1]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatERK12APyFloatDataNSt7uint8_tENSt7uint8_tE5exp_t">[2]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatEb5exp_t5man_tNSt7uint8_tENSt7uint8_tE5exp_t">[3]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatEb5exp_t5man_tNSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[4]</a>
