deploy: 82e8047a99261377f2075f6ec640c2657f92c0ce

--- a/genindex.html
+++ b/genindex.html
@@ -662,6 +662,8 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed7is_zeroEv">APyCFixed::is_zero (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed5latexEv">APyCFixed::latex (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed3oneEii">APyCFixed::one (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK8APyFixed">APyCFixed::operator!= (C++ function)</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKN2nb4int_E">[2]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneERKNSt7complexIdEE">[3]</a>, <a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixedneEd">[4]</a>
