--- a/genindex.html
+++ b/genindex.html
@@ -764,6 +764,8 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray4onesERK14PyShapeParam_tNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::ones (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4I0ENK14APyCFixedArrayneE15ThirdPartyArrayIbERK1T">APyCFixedArray::operator!= (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK14APyCFixedArray">APyCFixedArray::operator* (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraymlERK9APyCFixed">[1]</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK14APyCFixedArray">APyCFixedArray::operator+ (C++ function)</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplERK9APyCFixed">[1]</a>, <a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayplEv">[2]</a>
@@ -775,6 +777,8 @@
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraylsEKi">APyCFixedArray::operator&lt;&lt; (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArraylSEKi">APyCFixedArray::operator&lt;&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4I0ENK14APyCFixedArrayeqE15ThirdPartyArrayIbERK1T">APyCFixedArray::operator== (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArrayrsEKi">APyCFixedArray::operator&gt;&gt; (C++ function)</a>
 </li>
@@ -1026,8 +1030,6 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray12from_numbersERKN2nb5typedIN2nb8iterableEN2nb3anyEEENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::from_numbers (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray9fullrangeERKN2nb6objectERKN2nb6objectENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::fullrange (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::identity (C++ function)</a>
@@ -1038,11 +1040,15 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray4onesERK14PyShapeParam_tNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::ones (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArrayneE15ThirdPartyArrayIbERK1T">APyFixedArray::operator!= (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymlERK13APyFixedArray">APyFixedArray::operator* (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraymlERK8APyFixed">[1]</a>
 </li>
@@ -1052,9 +1058,19 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraydvERK13APyFixedArray">APyFixedArray::operator/ (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraydvERK8APyFixed">[1]</a>
 </li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArrayltE15ThirdPartyArrayIbERK1T">APyFixedArray::operator&lt; (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraylsEKi">APyFixedArray::operator&lt;&lt; (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArraylSEKi">APyFixedArray::operator&lt;&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArrayleE15ThirdPartyArrayIbERK1T">APyFixedArray::operator&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArrayeqE15ThirdPartyArrayIbERK1T">APyFixedArray::operator== (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArraygtE15ThirdPartyArrayIbERK1T">APyFixedArray::operator&gt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4I0ENK13APyFixedArraygeE15ThirdPartyArrayIbERK1T">APyFixedArray::operator&gt;= (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArrayrsEKi">APyFixedArray::operator&gt;&gt; (C++ function)</a>
 </li>
@@ -1428,6 +1444,8 @@
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray4onesERK14PyShapeParam_tNSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">APyFloatArray::ones (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArrayneE15ThirdPartyArrayIbERK1T">APyFloatArray::operator!= (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymlERK13APyFloatArray">APyFloatArray::operator* (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymlERK8APyFloat">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK13APyFloatArray">APyFloatArray::operator+ (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplERK8APyFloat">[1]</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArrayplEv">[2]</a>
@@ -1435,6 +1453,16 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK13APyFloatArray">APyFloatArray::operator- (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiERK8APyFloat">[1]</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraymiEv">[2]</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraydvERK13APyFloatArray">APyFloatArray::operator/ (C++ function)</a>, <a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraydvERK8APyFloat">[1]</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArrayltE15ThirdPartyArrayIbERK1T">APyFloatArray::operator&lt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArrayleE15ThirdPartyArrayIbERK1T">APyFloatArray::operator&lt;= (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArrayeqE15ThirdPartyArrayIbERK1T">APyFloatArray::operator== (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArraygtE15ThirdPartyArrayIbERK1T">APyFloatArray::operator&gt; (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4I0ENK13APyFloatArraygeE15ThirdPartyArrayIbERK1T">APyFloatArray::operator&gt;= (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraycoEv">APyFloatArray::operator~ (C++ function)</a>
 </li>
@@ -1648,14 +1676,14 @@
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct7op1_absE">ComplexFixedPointInnerProduct::op1_abs (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct7op2_absE">ComplexFixedPointInnerProduct::op2_abs (C++ member)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4NK29ComplexFixedPointInnerProductclE3CIt3CIt2ItNSt6size_tENSt6size_tENSt6size_tE">ComplexFixedPointInnerProduct::operator() (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct8prod_immE">ComplexFixedPointInnerProduct::prod_imm (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct7productE">ComplexFixedPointInnerProduct::product (C++ member)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct12product_bitsE">ComplexFixedPointInnerProduct::product_bits (C++ member)</a>
@@ -1667,6 +1695,16 @@
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct10src1_limbsE">ComplexFixedPointInnerProduct::src1_limbs (C++ member)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct10src2_limbsE">ComplexFixedPointInnerProduct::src2_limbs (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv4I0E25ComplexFixedPointToDouble">ComplexFixedPointToDouble (C++ struct)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv4N25ComplexFixedPointToDouble25ComplexFixedPointToDoubleERK12APyFixedSpec">ComplexFixedPointToDouble::ComplexFixedPointToDouble (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv4N25ComplexFixedPointToDouble9converterE">ComplexFixedPointToDouble::converter (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv4N25ComplexFixedPointToDouble7n_limbsE">ComplexFixedPointToDouble::n_limbs (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apycfixed_util.html#_CPPv4NK25ComplexFixedPointToDoubleclE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">ComplexFixedPointToDouble::operator() (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv414ContextManager">ContextManager (C++ class)</a>
 </li>
@@ -1864,6 +1902,14 @@
 </li>
         <li><a href="cpp_api/apyfixed_util.html#_CPPv4N22FixedPointInnerProduct10src2_limbsE">FixedPointInnerProduct::src2_limbs (C++ member)</a>
 </li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4I0E18FixedPointToDouble">FixedPointToDouble (C++ struct)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4N18FixedPointToDouble18FixedPointToDoubleERK12APyFixedSpec">FixedPointToDouble::FixedPointToDouble (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4N18FixedPointToDouble9frac_bitsE">FixedPointToDouble::frac_bits (C++ member)</a>
+</li>
+        <li><a href="cpp_api/apyfixed_util.html#_CPPv4NK18FixedPointToDoubleclE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">FixedPointToDouble::operator() (C++ function)</a>
+</li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.flatten">flatten() (apytypes.APyCFixedArray method)</a>
 
         <ul>
@@ -1953,6 +1999,14 @@
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK23FloatingPointMultiplierclEPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tE">FloatingPointMultiplier::operator() (C++ function)</a>, <a href="cpp_api/apyfloat_util.html#_CPPv4NK23FloatingPointMultiplierclERK12APyFloatDataRK12APyFloatDataR12APyFloatData">[1]</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_NSt6size_tE_NSt6size_tE_NSt6size_tEE23FloatingPointSubtractor">FloatingPointSubtractor (C++ type)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4I0E21FloatingPointToDouble">FloatingPointToDouble (C++ struct)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N21FloatingPointToDouble21FloatingPointToDoubleERK12APyFloatSpec">FloatingPointToDouble::FloatingPointToDouble (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4NK21FloatingPointToDoubleclE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">FloatingPointToDouble::operator() (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat_util.html#_CPPv4N21FloatingPointToDouble4specE">FloatingPointToDouble::spec (C++ member)</a>
 </li>
         <li><a href="api/utils.html#apytypes.fn">fn() (in module apytypes)</a>
 </li>
@@ -2070,13 +2124,17 @@
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.get_float_quantization_mode">get_float_quantization_mode() (in module apytypes)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.get_float_quantization_seed">get_float_quantization_seed() (in module apytypes)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/array_utils.html#_CPPv419get_normalized_axesRK14PyShapeParam_tKNSt6size_tE">get_normalized_axes (C++ function)</a>
 </li>
         <li><a href="cpp_api/python_util.html#c.GET_OB_DIGIT">GET_OB_DIGIT (C macro)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv423get_preferred_array_libv">get_preferred_array_lib (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv430get_preferred_array_lib_as_strv">get_preferred_array_lib_as_str (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv413get_qntz_func16QuantizationModeb">get_qntz_func (C++ function)</a>
 </li>
@@ -2290,6 +2348,8 @@
   <h2>M</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4IDpE24make_third_party_ndarray15ThirdPartyArrayIDp7NB_ARGSERKN8nanobind7ndarrayIDp7NB_ARGSEE18ThirdPartyArrayTag">make_third_party_ndarray (C++ function)</a>
+</li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.man">man (apytypes.APyFloat property)</a>
 </li>
         <li><a href="api/apycfloat.html#apytypes.APyCFloat.man_bits">man_bits (apytypes.APyCFloat property)</a>
@@ -2304,14 +2364,14 @@
         </ul></li>
         <li><a href="cpp_api/ieee754.html#_CPPv413man_of_doubled">man_of_double (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.max">max() (apytypes.APyFixedArray method)</a>
 
         <ul>
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.max">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/arrayfunctions.html#apytypes.meshgrid">meshgrid() (in module apytypes)</a>
 </li>
         <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.min">min() (apytypes.APyFixedArray method)</a>
@@ -2730,6 +2790,10 @@
 </li>
         <li><a href="cpp_api/ieee754.html#_CPPv417set_man_of_doubleRdNSt8uint64_tE">set_man_of_double (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv423set_preferred_array_lib18ThirdPartyArrayTag">set_preferred_array_lib (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv432set_preferred_array_lib_from_strRKNSt6stringE">set_preferred_array_lib_from_str (C++ function)</a>
+</li>
         <li><a href="cpp_api/ieee754.html#_CPPv418set_sign_of_doubleRdb">set_sign_of_double (C++ function)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.shape">shape (apytypes.APyCFixedArray property)</a>
@@ -2764,10 +2828,10 @@
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_mulEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd16vector_mul_constEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE10apy_limb_tN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul_const (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd16vector_mul_constEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorE10apy_limb_tN9APyBufferI10apy_limb_tE11vector_type8iteratorENSt6size_tE">simd::vector_mul_const (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd26vector_multiply_accumulateEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_multiply_accumulate (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_simd.html#_CPPv4N4simd10vector_negEN9APyBufferI10apy_limb_tE11vector_type8iteratorEN9APyBufferI10apy_limb_tE11vector_type14const_iteratorENSt6size_tE">simd::vector_neg (C++ function)</a>
@@ -2914,6 +2978,20 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.T">(apytypes.APyFloatArray property)</a>
 </li>
         </ul></li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4IDpE15ThirdPartyArray">ThirdPartyArray (C++ type)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv418ThirdPartyArrayTag">ThirdPartyArrayTag (C++ enum)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag4CUPYE">ThirdPartyArrayTag::CUPY (C++ enumerator)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag3JAXE">ThirdPartyArrayTag::JAX (C++ enumerator)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag5NUMPYE">ThirdPartyArrayTag::NUMPY (C++ enumerator)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag7PYTORCHE">ThirdPartyArrayTag::PYTORCH (C++ enumerator)</a>
+</li>
+        <li><a href="cpp_api/apytypes_common.html#_CPPv4N18ThirdPartyArrayTag10TENSORFLOWE">ThirdPartyArrayTag::TENSORFLOW (C++ enumerator)</a>
+</li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_AWAY">TIES_AWAY (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TIES_EVEN">TIES_EVEN (apytypes.QuantizationMode attribute)</a>
@@ -2946,6 +3024,8 @@
         </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv414to_bits_uint64RK12APyFloatDataNSt7uint8_tENSt7uint8_tE">to_bits_uint64 (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_NEG">TO_NEG (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv414to_nibble_listRKNSt6vectorI10apy_limb_tEENSt6size_tE">to_nibble_list (C++ function)</a>
@@ -2960,8 +3040,6 @@
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.to_numpy">(apytypes.APyFloatArray method)</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_POS">TO_POS (apytypes.QuantizationMode attribute)</a>
 </li>
         <li><a href="api/quantizationoverflow.html#apytypes.QuantizationMode.TO_ZERO">TO_ZERO (apytypes.QuantizationMode attribute)</a>
