deploy: fd2a726561b585da06aa15cdc82324594bd3fd69

--- a/genindex.html
+++ b/genindex.html
@@ -866,6 +866,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed7get_minEii">APyFixed::get_min (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed8get_zeroEv">APyFixed::get_zero (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed13increment_lsbEv">APyFixed::increment_lsb (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed8int_bitsEv">APyFixed::int_bits (C++ function)</a>
@@ -1199,6 +1201,8 @@
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat12get_man_bitsEv">APyFloat::get_man_bits (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8get_signEv">APyFloat::get_sign (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8get_zeroEv">APyFloat::get_zero (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat9ieee_biasENSt7uint8_tE">APyFloat::ieee_bias (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat9ieee_biasEv">[1]</a>
 </li>
